--- a/5_Multimodal_Chat_Simple.ipynb
+++ b/5_Multimodal_Chat_Simple.ipynb
@@ -733,7 +733,7 @@
         "    chatbot = MultimodalChatbot(value=initial_conv, height=500)\n",
         "\n",
         "    with gr.Row():\n",
-        "        place_input = gr.Textbox(label=\"Enter a place\", placeholder=\"E.g., Paris, Tokyo, New York\")\n",
+        "        place_input = gr.Textbox(label=\"Enter a place\", placeholder=\"E.g., Paris France, Tokyo Japan, Genova Italy\")\n",
         "        send_btn = gr.Button(\"Search Hotels\")\n",
         "\n",
         "    send_btn.click(chatbot_response, inputs=[place_input, chatbot], outputs=chatbot)\n",
@@ -743,10 +743,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 630
         },
         "id": "zDw9AUSd1h7e",
-        "outputId": "0a4a4f10-f5c6-444c-f06f-4770f3a9c55d"
+        "outputId": "68d60b16-0a69-4f6c-c977-9b64019c860f"
       },
       "execution_count": null,
       "outputs": [
@@ -757,7 +757,7 @@
             "Setting queue=True in a Colab notebook requires sharing enabled. Setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
             "\n",
             "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
-            "Running on public URL: https://49f4e0237e98a8483f.gradio.live\n",
+            "Running on public URL: https://c52b7b55dea318e7bd.gradio.live\n",
             "\n",
             "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -769,116 +769,10 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://49f4e0237e98a8483f.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://c52b7b55dea318e7bd.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The coordinates of Genova Italia are: Latitude: 44.40726, Longitude: 8.9338624\n",
-            "The 5 closest locations are:\n",
-            "\n",
-            "       hotel_id                    hotel_name  chain_id  latitude  longitude  \\\n",
-            "14386     19841          Bristol Palace Hotel        -1  44.40679    8.93620   \n",
-            "35138     48622       Best Western City Hotel         0  44.40925    8.93546   \n",
-            "34118     46980  Best Western Hotel Metropoli         0  44.40995    8.93501   \n",
-            "12274     16954               NH Genova Plaza        -1  44.41079    8.93791   \n",
-            "49601    432315    Old Port Genova Centro B&B        -1  44.41097    8.92867   \n",
-            "\n",
-            "         city country    state  county      suburb postcode  \\\n",
-            "14386  Genova  Italia  Liguria  Genova    Portoria    16123   \n",
-            "35138  Genova  Italia  Liguria  Genova    Portoria    16123   \n",
-            "34118  Genova  Italia  Liguria  Genova   Maddalena    16123   \n",
-            "12274  Genova  Italia  Liguria  Genova    Portoria    16122   \n",
-            "49601  Genova  Italia  Liguria  Genova  Centro Est    16100   \n",
-            "\n",
-            "                      road house_number  distance_km  \n",
-            "14386  Via Venti Settembre    227 rosso     0.192905  \n",
-            "35138   Via San Sebastiano            6     0.255086  \n",
-            "34118  Vico dei Migliorini          NaN     0.312697  \n",
-            "12274   Via Martin Piaggio           11     0.507388  \n",
-            "49601   Piazza Caricamento     65 rosso     0.583352  \n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Expanding inputs for image tokens in LLaVa should be done in processing. Please add `patch_size` and `vision_feature_select_strategy` to the model's processing config or set directly with `processor.patch_size = {{patch_size}}` and processor.vision_feature_select_strategy = {{vision_feature_select_strategy}}`. Using processors without these attributes in the config is deprecated and will throw an error in v4.47.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Skipping image at URL: https://i.travelapi.com/hotels/1000000/10000/7400/7354/50ce3a3d_b.jpg\n",
-            "Skipping image at URL: https://i.travelapi.com/hotels/1000000/30000/22700/22623/9de3d2d2_b.jpg\n",
-            "Skipping image at URL: https://i.travelapi.com/hotels/13000000/12990000/12988500/12988492/a8199f02_b.jpg\n",
-            "Skipping image at URL: https://i.travelapi.com/hotels/13000000/12990000/12988500/12988492/7ef9ef38_b.jpg\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Location not found: Genova, Center  Italy\n",
-            "Location not found: Genova City Center, Italy\n",
-            "The coordinates of Milano, Italy are: Latitude: 45.4641943, Longitude: 9.1896346\n",
-            "The 5 closest locations are:\n",
-            "\n",
-            "       hotel_id               hotel_name  chain_id  latitude  longitude  \\\n",
-            "29595     40513        UNA Maison Milano        -1  45.46329    9.18856   \n",
-            "16385     22510       TownHouse Galleria        -1  45.46564    9.18925   \n",
-            "2805       4145              Hotel Straf        -1  45.46501    9.19140   \n",
-            "29772     40778        Park Hyatt Milano         1  45.46564    9.18882   \n",
-            "25217     34487  The Gray - A SINA Hotel        -1  45.46535    9.19131   \n",
-            "\n",
-            "         city country      state  county       suburb postcode  \\\n",
-            "29595  Milano  Italia  Lombardia  Milano  Municipio 1    20123   \n",
-            "16385  Milano  Italia  Lombardia  Milano  Municipio 1    20121   \n",
-            "2805   Milano  Italia  Lombardia  Milano  Municipio 1    20121   \n",
-            "29772  Milano  Italia  Lombardia  Milano  Municipio 1    20121   \n",
-            "25217  Milano  Italia  Lombardia  Milano  Municipio 1    20121   \n",
-            "\n",
-            "                     road house_number  distance_km  \n",
-            "29595          Via Dogana            3     0.130899  \n",
-            "16385  Via Silvio Pellico            8     0.163529  \n",
-            "2805     Via San Raffaele            3     0.164869  \n",
-            "29772  Via Tommaso Grossi            1     0.172852  \n",
-            "25217    Via San Raffaele        5 N01     0.183265  \n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Skipping image at URL: https://i.travelapi.com/hotels/1000000/1000000/995700/995633/6f49fa50_b.jpg\n",
-            "Skipping image at URL: https://i.travelapi.com/hotels/1000000/980000/977300/977287/98afee91_b.jpg\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-          ]
         }
       ]
     }
@@ -889,7 +783,7 @@
       "gpuType": "L4",
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyPOO5QicspN4dqasXTtgvSG",
+      "authorship_tag": "ABX9TyM6QktndH3Iy0pPo4lQlZNd",
       "include_colab_link": true
     },
     "kernelspec": {
