--- a/5_Multimodal_Chat_Simple.ipynb
+++ b/5_Multimodal_Chat_Simple.ipynb
@@ -11,6 +11,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Hotel Recommendation with Multimodal and LLM\n",
+        "#### Developed by Ruslan Magana ruslanmv.com"
+      ],
+      "metadata": {
+        "id": "v7fv4YX8H5BX"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -730,7 +740,7 @@
         "    gr.Markdown(\"**Provide the location to discover hotels and receive personalized recommendations!**\")\n",
         "\n",
         "    initial_conv = initial_conversation()\n",
-        "    chatbot = MultimodalChatbot(value=initial_conv, height=500)\n",
+        "    chatbot = MultimodalChatbot(value=initial_conv, height=600)\n",
         "\n",
         "    with gr.Row():\n",
         "        place_input = gr.Textbox(label=\"Enter a place\", placeholder=\"E.g., Paris France, Tokyo Japan, Genova Italy\")\n",
@@ -743,10 +753,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 630
+          "height": 1000
         },
         "id": "zDw9AUSd1h7e",
-        "outputId": "68d60b16-0a69-4f6c-c977-9b64019c860f"
+        "outputId": "57dfcec1-ab0c-4638-edec-3021f5af656f"
       },
       "execution_count": null,
       "outputs": [
@@ -757,7 +767,7 @@
             "Setting queue=True in a Colab notebook requires sharing enabled. Setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
             "\n",
             "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
-            "Running on public URL: https://c52b7b55dea318e7bd.gradio.live\n",
+            "Running on public URL: https://b62c6f3021a64d3c96.gradio.live\n",
             "\n",
             "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -769,10 +779,50 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://c52b7b55dea318e7bd.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://b62c6f3021a64d3c96.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Location not found: Roma city center, Italy\n",
+            "Location not found: Rome, city center, Italy\n",
+            "Location not found: Roma city center Italy\n",
+            "Location not found: Rome , city center, Italy\n",
+            "The coordinates of Rome Italy are: Latitude: 41.8933203, Longitude: 12.4829321\n",
+            "The 5 closest locations are:\n",
+            "\n",
+            "       hotel_id                               hotel_name  chain_id  latitude  \\\n",
+            "23019     31441                         Kolbe Hotel Rome        -1  41.89033   \n",
+            "32205     44229                              Hotel Forum        -1  41.89388   \n",
+            "17449     23949                        Hotel Cosmopolita        -1  41.89685   \n",
+            "27067     37023               The Inn at the Roman Forum        -1  41.89465   \n",
+            "24351     33264  Palazzo al Velabro - Serviced Apartment        -1  41.88948   \n",
+            "\n",
+            "       longitude  city country  state         county            suburb  \\\n",
+            "23019   12.48414  Roma  Italia  Lazio  Roma Capitale  Municipio Roma I   \n",
+            "32205   12.48748  Roma  Italia  Lazio  Roma Capitale  Municipio Roma I   \n",
+            "17449   12.48395  Roma  Italia  Lazio  Roma Capitale  Municipio Roma I   \n",
+            "27067   12.48756  Roma  Italia  Lazio  Roma Capitale  Municipio Roma I   \n",
+            "24351   12.48240  Roma  Italia  Lazio  Roma Capitale  Municipio Roma I   \n",
+            "\n",
+            "      postcode                 road house_number  distance_km  \n",
+            "23019    00186   Via di San Teodoro           48     0.347214  \n",
+            "32205    00184    Via Tor de' Conti           25     0.381549  \n",
+            "17449    00187  Via di Sant'Eufemia          NaN     0.401426  \n",
+            "27067    00184   Via degli Ibernesi          NaN     0.410604  \n",
+            "24351    00153      Via del Velabro          NaN     0.429288  \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+          ]
         }
       ]
     }
@@ -783,7 +833,7 @@
       "gpuType": "L4",
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6QktndH3Iy0pPo4lQlZNd",
+      "authorship_tag": "ABX9TyNs2vjZAFv6r4Lkn6k5GCQN",
       "include_colab_link": true
     },
     "kernelspec": {
